# agyqueue

./: .env.example  .gitignore  Dockerfile  INTEGRATION_GUIDE.md  README.md  cloudbuild.yaml  docker-compose.yml  gemini-extension.json  pyproject.toml  requirements.txt
.agents/: AGENTS.md  mcp_config.json
agyqueue/: __init__.py  client.py  config.py  dashboard.html  gcs_helper.py  mcp_server.py  models.py  notifications.py  review.html  storage.py  task_queue.py  worker.py
deployment/kubernetes/: hpa.yaml  kustomization.yaml  mcp-server.yaml  namespace.yaml  redis.yaml  sqlite-pvc.yaml  worker.yaml
deployment/terraform/: cache.tf  cloud_run.tf  db.tf  iam.tf  main.tf  outputs.tf  variables.tf
examples/: agyqueue_mcp_smoke_test.py  antigravity_agent_sdk.py  demo.py  demo_cancel.py  google_adk_agent.py  mcp_sse_client.py  mcp_stdio_client.py  multi_agent_approval_demo_run.md  multi_agent_deployment_demo.py  rest_client_sdk_demo.py  test_agyqueue_features.py  test_new_tools.py
examples/devops_pipeline_demo/: pipeline_agent.py  run_demo.py
mcp-configs/: antigravity_plugin.json  claude_desktop_config.json  cursor_config.json  windsurf_config.json
